Made commit message pattern configurable
- Commit message pattern can be configured in config file

--- a/commit-msg.config
+++ b/commit-msg.config
@@ -10,3 +10,6 @@ kan_web_url_task: https://<domain>.kanbanize.com/ctrl_board/<boardid>/cards/<tas
 # set env var key names for sensitive settings
 env_var_kan_api_key_name: KAN_API_KEY
 env_var_kan_api_domain_name: KAN_API_DOMAIN
+
+#commit message configurations
+commit_msg_pattern: '^(ref|feat|fix|chore|docs): (\d+)'
