add pre commit hook to scan file for todo and fixme

--- a/install_hooks.config.yml
+++ b/install_hooks.config.yml
@@ -2,7 +2,8 @@
 # key: hook, value: source file name
 
 ## pre-commit hook
-pre-commit: pre-commit.rb
+# pre-commit: pre-commit.rb
+pre-commit: pre-commit.filescan.sh
 
 ## commit-msg hook
 # commit-msg: commit-msg.kanbanize.rb
